--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
-@font-face{
+@font-face {
 	font-family: 'Avenir Next', sans-serif;
 	font-display: swap;
 	src: url("../fonts/AvenirNextCyr-Bold.woff2") format("woff2"), url("../fonts/AvenirNextCyr-Bold.woff") format("woff");
@@ -14,20 +14,12 @@ body {
 }
 
 .wrapper {
-	display: flex;
-	flex-direction: column;
 	min-height: 100%;
+	display: grid;
+	grid-template: minmax(140px, auto) 1fr minmax(390px, auto) / 1fr;
 }
 
-.main {
-	flex: 1 0 auto;
-}
-
-.footer {
-	flex: 0 0 auto;
-}
-
-.container{
+.container {
 	max-width: 1170px;
 	margin: 0 auto;
 	padding: 0 15px;
@@ -35,4 +27,142 @@ body {
 
 body {
 	font-family: 'Inter', sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 120%;
+	color: #1A1A1A;
+	background-color: rgba(243, 235, 235, 0.835);
+}
+
+.contact__box {
+	display: grid;
+	grid-template-columns: minmax(auto, 630px) minmax(auto, 470px);
+	gap: 40px;
+}
+
+.contact__block {}
+
+.contact__title {
+	font-family: 'Avenir Next';
+	font-weight: 700;
+	font-size: 32px;
+	line-height: 44px;
+	margin-bottom: 13px;
+}
+
+.contact__text {
+	line-height: 28px;
+	margin-bottom: 35px;
+}
+
+.contact__form {}
+
+.contact__form-box {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	row-gap: 35px;
+	column-gap: 32px;
+	margin-bottom: 53px;
+}
+
+.contact__form-input {
+	background: #FFFFFF;
+	box-shadow: 0px 16px 32px rgba(202, 203, 210, 0.25);
+	border-radius: 8px;
+	padding: 22px 18px;
+}
+
+.contact__form-input--big {
+	grid-column: span 2;
+}
+
+.contact__form-input::placeholder {
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 120%;
+	color: #414042;
+	opacity: 0.5;
+}
+
+.contact__form-text {
+	max-width: 630px;
+	width: 100%;
+	height: 338px;
+	margin-bottom: 50px;
+}
+
+.contact__form-btn {
+	background-color: #1A1A1A;
+	border-radius: 10px;
+	padding: 19px;
+	font-weight: 700;
+	line-height: 19px;
+	text-align: center;
+	color: #fff;
+	max-width: 222px;
+	width: 100%;
+}
+
+.contact__maps {
+	margin: 19px 0;
+}
+
+
+
+
+/* ---------- */
+
+.select {
+	position: relative;
+}
+
+.select.is-active .select__body {
+	display: block;
+}
+
+.select__header {
+	cursor: pointer;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
+}
+
+.select__current {
+	color: #414042;
+	opacity: 0.5;
+}
+
+.select__icon {
+	width: 20px;
+	height: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.select__body {
+	background-color: #fff;
+	box-shadow: 0px 16px 32px rgba(202, 203, 210, 0.25);
+	border-bottom-left-radius: 8px;
+	border-bottom-right-radius: 8px;
+	padding: 12px 19px;
+	display: none;
+	left: 0;
+	right: 0;
+	position: absolute;
+	transition: all .6s;
+	z-index: 10;
+}
+
+.select__item {
+	line-height: 175%;
+	color: #424242;
+	cursor: pointer;
+	padding: 6px 0;
+	transition: all .6s;
+}
+
+.select__item:hover {
+	background-color: #f2f2f2;
+	padding-left: 12px;
 }
