Custom Select - done

--- a/css/style.css
+++ b/css/style.css
@@ -107,9 +107,6 @@ body {
 	margin: 19px 0;
 }
 
-
-
-
 /* ---------- */
 
 .select {
@@ -138,6 +135,11 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	transition: rotate .8s;
+}
+
+.select.is-active .select__icon {
+	rotate: 180deg;
 }
 
 .select__body {
