--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,9 @@ body {
 }
 
 .container {
-	max-width: 1170px;
+	max-width: 1180px;
 	margin: 0 auto;
-	padding: 0 15px;
+	padding: 0 20px;
 }
 
 body {
@@ -38,6 +38,12 @@ body {
 	display: grid;
 	grid-template-columns: minmax(auto, 630px) minmax(auto, 470px);
 	gap: 40px;
+}
+@media (max-width: 1050px) {
+	.contact__box {
+		grid-template-columns: minmax(250px, auto);
+		grid-template-rows: auto;
+	}
 }
 
 .contact__title {
@@ -60,6 +66,17 @@ body {
 	column-gap: 32px;
 	margin-bottom: 53px;
 }
+@media (max-width: 1050px) {
+	.contact__form-box {
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: auto;
+	}
+}
+@media (max-width: 535px) {
+	.contact__form-box {
+		grid-template-columns: 1fr;
+	}
+}
 
 .contact__form-input {
 	background: #FFFFFF;
@@ -71,6 +88,11 @@ body {
 .contact__form-input--big {
 	grid-column: span 2;
 }
+@media (max-width: 535px) {
+	.contact__form-input--big {
+		grid-column: span 1;
+	}
+}
 
 .contact__form-input::placeholder {
 	font-weight: 400;
@@ -81,7 +103,6 @@ body {
 }
 
 .contact__form-text {
-	max-width: 630px;
 	width: 100%;
 	height: 338px;
 	margin-bottom: 50px;
@@ -169,13 +190,31 @@ body {
 
 /* ---------Maps--------- */
 #map {
-	width: 470px;
+	min-width: 470px;
 	height: 936px;
+}
+@media (max-width: 1050px) {
+	#map {
+		height: 573px;
+	}
+}
+@media (max-width: 535px) {
+	#map {
+		min-width: 250px;
+	}
 }
 .contact-maps {
 	font-size: 12px;
-	width: 214px;
-	padding: 16px;
+	width: 244px !important;
+	padding: 22px 16px;
+}
+@media (max-width: 535px) {
+	.contact-maps {
+		font-size: 10px;
+		line-height: 100%;
+		min-width: 180px !important;
+		padding: 16px;
+	}
 }
 .contact-maps__title {
 	font-weight: 700;
@@ -207,5 +246,9 @@ body {
 }
 .gm-style .gm-style-iw-c {
 	box-shadow: 0px 15px 30px rgba(220, 221, 243, 0.25);
+	padding: 0;
+}
+.gm-style-iw-d {
+	overflow: hidden !important;
 }
 /* ---------------------- */
